@@ -1,3 +1,7 @@
+2011-06-02  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/ext/mousetrap.jl: added defvars to be able to
+	adjust the mousetrap keybindings
+
 2011-05-31  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/ext/mousetrap.jl: added mousetrapping feature,
 	original module by Fernando Carmona Varo, modified by me
